fix spacing

--- a/index.scss
+++ b/index.scss
@@ -283,7 +283,7 @@ footer {
     }
   }
   .container {
-    margin: 10rem 15rem !important;
+    margin: 10rem 20rem !important;
     width: 90vw !important;
 
     h1 {
